--- a/contact/src/app/update/update.component.html
+++ b/contact/src/app/update/update.component.html
@@ -1,1 +1,29 @@
-<p>update works!</p>
+<div>
+
+    <div class="adddiv">
+        <p style="font-size: 4vh;text-align: center;">Update Contact Below</p>
+
+        <form #searchForm="ngForm">
+            <label for="exampleInputEmail1">Name</label>
+            <input  [(ngModel)]='userforudate.FName' matInput name="FName" type="text"class="form-control" id='Name'>
+
+            <label for="exampleInputEmail1">Mobile</label>
+            <input type="number" onKeyPress="if(this.value.length==10) return false;" [(ngModel)]='userforudate.Mobile' matInput name="Mobile" [maxLength]="10" class="form-control" id='Mobile'>
+
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email"  [(ngModel)]='userforudate.Email' matInput name="Email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+
+        <div class="form-group">
+          <label for="exampleInputPassword1">Company</label>
+          <input type="text"[(ngModel)]='userforudate.Company' matInput name="Company" class="form-control" id="Company" placeholder="Company">
+        </div>
+        <div class="form-group">
+            <label for="exampleInputPassword1">Date of birth</label>
+            <input type="date"[(ngModel)]='userforudate.Date' matInput name="Date" class="form-control" id="Date" placeholder="Date">
+          </div>
+
+        <button type="submit" (click)='submit(searchForm.value);(searchForm.reset)' class="btn btn-primary">Update Contact</button>
+      </form>
+    </div>
+
+</div>
